--- a/youtube.html
+++ b/youtube.html
@@ -1,4 +1,4 @@
-]<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
     <head>
      <title>Youtube</title>
@@ -7,70 +7,33 @@
      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
      <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 
-     <style>
-         .thumbnail {
-             width: 100%;
-         }
-
-         .channel-profile {
-             width: 40px;
-             border-radius: 50px;
-         }
-
-         .video-grid {
-             display: grid;
-             grid-template-columns: 1fr 1fr 1fr;
-             column-gap: 15px;
-             row-gap: 40px;
-         }
-
-         .video-info-grid {
-             display: grid;
-             grid-template-columns: 50px 1fr;
-         }
-
-         p {
-             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-             margin-top: 0;
-             margin-bottom: 0;
-         }
-         .video-title {
-             font-size: 18px;
-             font-weight: bold;
-             line-height: 24px;
-             margin-bottom: 20px;
-         }
-
-         .video-stats {
-             font-size: 14px;
-             margin-bottom: 20px;
-             color: rgb(96, 96, 96);
-         }
-
-         .video-author {
-             font-size: 14px;
-             color: rgb(96, 96, 96);
-             margin-bottom: 5px;
-         }
-
-         .search-bar {
-             display: block;
-         }
-
-         .thumbnail-row {
-             margin-bottom: 12px;
-         }
-
-     </style>   
+     <link rel="stylesheet" href="Styles/general.css">
+     <link rel="stylesheet" href="Styles/video.css">
+     <link rel="stylesheet" href="Styles/header.css">
+ 
     </head>
     <body>
 
         <div class="header">
-            <div class="left-section"></div>
-            <div class="middle-section">
-                <input class="search-bar" type="text" placeholder="`Search">
+            <div class="left-section">
+                <img class="hamburger-menu" src="icon/hamburger-menu.svg">
+                <img class="youtube-logo" src="icon/youtube-logo.svg">
             </div>
-            <div class="right-section"></div>
+            <div class="middle-section">
+                <input class="search-bar" type="text" placeholder="Search">
+                <button class="search-button">
+                    <img class="search-icon" src="icon/search.svg">
+                </button>
+                <button class="voice-search-button">
+                    <img class="voice-search-icon" src="icon/voice-search-icon.svg">
+                </button>
+            </div>
+            <div class="right-section">
+                <img class="upload-icon" src="icon/upload.svg">
+                <img class="youtube-icon" src="icon/youtube-apps.svg">
+                <img class="notification-icon" src="icon/notifications.svg">
+                <img class="current-user-picture" src="channel-picture/channel-picture-ten.jpeg">
+            </div>
         </div>
 
         <div class="video-grid">
